--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://thoughts.moooo.ooo/"
+baseURL = "https://thoughts.moooo.ooo/"
 languageCode = "en-us"
 title = "might be a cow"
 theme = "neofeed-theme"
