--- a/config.toml
+++ b/config.toml
@@ -5,4 +5,4 @@ theme = "mini"
 
 [author]
 name = "EJhR6aBuQgMzyKkLkx4GxJ5cKzuZJ6ZNinA4t87DxYJS"
-image = "https://arweave.net/Ehiz4ZP8LROBq9my-e4UT_HoYvKomev-uiNKHtcOSOc"
+image = "https://cdn.farm.moooo.ooo/nft/b67210ece1732555a5c1a6e1710e5621.PNG"
